--- a/Logo-Designing.html
+++ b/Logo-Designing.html
@@ -216,28 +216,40 @@
 									you're guaranteed a completely personalized experience every time!</p>
 								<div class="row mt-3">
 									<div class="col-md-8">
-										<h2 class="details-info-title mt-4 mb-2 d-inline-block" style="color: #F44730;">High Performance & Reliability</h2>
-								    <p class="details-info-text mt-0">We strive for maximum performance and reliability when it comes to website
-										development. Our team is committed to delivering high-quality results with fast
-										turnaround times at competitive rates. We also offer ongoing maintenance and
-										support services for all our clients.
+										<h2 class="details-info-title mt-4 mb-2 d-inline-block" style="color: #F44730;">Unlimited revisions, unlimited possibilities</h2>
+								    <p class="details-info-text mt-0">Once we design your logo, we'll provide unlimited revisions until it meets all of
+										your expectations - meaning endless possibilities for creating something truly
+										remarkable!
 										</p>
 										<h2 class="details-info-title mt-4 mb-2 d-inline-block" style="color: #F44730;">Service Include</h2>
                                     <ul class="details-list details-list-project mt-3">
-                                        <li><span style="font-weight: bolder;">Custom website design:</span> Our team can create a unique and professional website
-											design that reflects your brand and meets your specific requirements.</li>
-                                        <li><span style="font-weight: bolder;"> Content management system (CMS) development:</span> We can develop and integrate
-											a content management system (CMS) that allows you to easily manage and
-											update your website content.</li>
-                                        <li><span style="font-weight: bolder;">E-commerce development:</span> Our experts can help you set up an online store and
-											integrate payment gateways, making it easy for you to sell products and services
-											online.</li>
-										<li><span style="font-weight: bolder;">AR/VR App Development:</span> We create augmented reality and virtual reality apps for
-											a more immersive user experience.</li>
-										<li><span style="font-weight: bolder;">Blockchain App Development:</span> We develop decentralized apps using blockchain
-											technology for secure and transparent transactions.</li>
-										<li><span style="font-weight: bolder;">Chatbot Development:</span> We build AI-powered chatbots for a conversational and
-											personalized user experience.</li>					
+                                        <li><span style="font-weight: bolder;">Consultation:</span> We begin by getting to know your brand, target audience, and
+											design preferences. We'll discuss your business goals and work together to create
+											a logo that accurately reflects your brand and resonates with your audience.
+											</li>
+                                        <li><span style="font-weight: bolder;"> Research and conceptualization:</span> Our team of experienced designers will conduct
+											market research and competitor analysis to understand the industry trends and
+											create a unique design that stands out from the rest. We'll present you with initial
+											sketches and drafts to get your feedback and make any necessary revisions.
+											</li>
+                                        <li><span style="font-weight: bolder;">Design:</span> Once we have a finalized concept, our designers will create a final design
+											in various file formats suitable for both print and digital use. We'll ensure that the
+											logo is scalable, versatile, and represents your brand effectively.</li>
+										<li><span style="font-weight: bolder;">Revisions:</span> We offer a number of revisions to the design, so you're completely
+											satisfied with the end result. We want to make sure that your logo meets your
+											specific needs and preferences.</li>
+										<li><span style="font-weight: bolder;">Style guide:</span> We'll provide you with a style guide that outlines how the logo should
+											be used, including color codes, typography, and usage guidelines. This ensures
+											that your brand identity is consistent across all marketing materials.</li>
+										<li><span style="font-weight: bolder;">Branding strategy:</span> We also offer branding strategy services that go beyond logo
+											design. We help you develop a cohesive brand identity across all your marketing
+											materials and create a strong, consistent brand voice.
+											</li>
+										<li><span style="font-weight: bolder;">Branding strategy:</span> Brand collateral: In addition to logo design services, we offer additional branding
+											materials, such as business cards, letterheads, and other printed or digital
+											collateral. These materials help you create a professional and cohesive brand
+											image.
+											</li>					
                                     </ul>
 									</div>
 									<div class="col-md-4 mt-4 mt-md-0">
