--- a/Website-Development.html
+++ b/Website-Development.html
@@ -323,13 +323,12 @@
 							<div class="footer-widget footer-black">
 								<h2 class="footer-title">Services</h2>
 								<ul class="footer-list">
-									<li><a href="#">Website Development</a></li>
-									<li><a href="#">Logo Designing</a></li>
-									<li><a href="#">Social Media Management</a></li>
-									<li><a href="#">Digital Marketing</a></li> 
-									<li><a href="#">App Development</a></li> 
-									<li><a href="#">Business Consultancy</a></li> 
-								
+									<li><a href="Website-Development.html">Website Development</a></li>
+									<li><a href="Logo-Designing.html">Logo Designing</a></li>
+									<li><a href="Social-Media-Management.html">Social Media Management</a></li>
+									<li><a href="Digital-Marketing .html">Digital Marketing</a></li> 
+									<li><a href="App-Development.html">App Development</a></li> 
+									<li><a href="Business-Consultancy.html">Business Consultancy</a></li> 
 								</ul>
 							</div>
 						</div>
