--- a/Logo-Designing.html
+++ b/Logo-Designing.html
@@ -208,7 +208,7 @@
                         </div>
                         <div class="col-lg-8 mobt-35">
 							<div class="details-info-wrap ">
-                                <img class="project-thumb-img w-100 " src="assets/images/project/Logo-design2-.png" alt="">
+                                <img class="project-thumb-img w-100 " src="assets/images/project/Logo Designing.png" alt="">
 								<h3 class="details-info-title mt-4 mb-2 d-inline-block" style="color: #F44730;">Logo Designing</h3>
 								<p class="details-info-text">Unique designs tailored for you <br>
 									Our experienced logo designers use the latest tools and techniques to create
