--- a/Social-Media-Management.html
+++ b/Social-Media-Management.html
@@ -208,7 +208,7 @@
                         </div>
                         <div class="col-lg-8 mobt-35">
 							<div class="details-info-wrap ">
-                                <img class="project-thumb-img w-100 " src="assets/images/project/Logo-design2-.png" alt="">
+                                <img class="project-thumb-img w-100 " src="assets/images/project/Social Media Management.png" alt="">
 								<h3 class="details-info-title mt-4 mb-2 d-inline-block" style="color: #F44730;">Logo Designing</h3>
 								<p class="details-info-text">Unique designs tailored for you <br>
 									Our experienced logo designers use the latest tools and techniques to create
@@ -253,7 +253,7 @@
                                     </ul>
 									</div>
 									<div class="col-md-4 mt-4 mt-md-0">
-										<img class="w-100" src="assets/images/project/Logo-design2-.png" alt="">
+										<img class="w-100" src="assets/images/project/Social Media Management 1.png" alt="">
 									</div>
 								</div>
 							</div>
