--- a/Social-Media-Management.html
+++ b/Social-Media-Management.html
@@ -209,46 +209,39 @@
                         <div class="col-lg-8 mobt-35">
 							<div class="details-info-wrap ">
                                 <img class="project-thumb-img w-100 " src="assets/images/project/Social Media Management.png" alt="">
-								<h3 class="details-info-title mt-4 mb-2 d-inline-block" style="color: #F44730;">Logo Designing</h3>
-								<p class="details-info-text">Unique designs tailored for you <br>
-									Our experienced logo designers use the latest tools and techniques to create
-									unique logos that capture your brand’s image and tell its story. With AK Digitals,
-									you're guaranteed a completely personalized experience every time!</p>
+								<h3 class="details-info-title mt-4 mb-2 d-inline-block" style="color: #F44730;">Social Media Management</h3>
+								<p class="details-info-text">Unlock Your Digital Potential<br>
+									Our team of certified professionals specializes in various marketing tools and
+									techniques to help you unlock your digital potential. Whether it's developing
+									strategies for successful campaigns or creating engaging content, our experts are
+									here to help you get the most from your investment.</p>
 								<div class="row mt-3">
 									<div class="col-md-8">
-										<h2 class="details-info-title mt-4 mb-2 d-inline-block" style="color: #F44730;">Unlimited revisions, unlimited possibilities</h2>
-								    <p class="details-info-text mt-0">Once we design your logo, we'll provide unlimited revisions until it meets all of
-										your expectations - meaning endless possibilities for creating something truly
-										remarkable!
-										</p>
+										
 										<h2 class="details-info-title mt-4 mb-2 d-inline-block" style="color: #F44730;">Service Include</h2>
                                     <ul class="details-list details-list-project mt-3">
-                                        <li><span style="font-weight: bolder;">Consultation:</span> We begin by getting to know your brand, target audience, and
-											design preferences. We'll discuss your business goals and work together to create
-											a logo that accurately reflects your brand and resonates with your audience.
+                                        <li><span style="font-weight: bolder;">Social Media Strategy:</span> We develop and implement a customized social media
+											strategy that aligns with your business goals.
+											Content Creation: We create engaging and high-quality content for your social
+											media platforms, including text, images, and videos.
 											</li>
-                                        <li><span style="font-weight: bolder;"> Research and conceptualization:</span> Our team of experienced designers will conduct
-											market research and competitor analysis to understand the industry trends and
-											create a unique design that stands out from the rest. We'll present you with initial
-											sketches and drafts to get your feedback and make any necessary revisions.
+                                        <li><span style="font-weight: bolder;">Social Media Scheduling:</span> We schedule and publish your content across all your
+											social media platforms, ensuring a consistent presence.
 											</li>
-                                        <li><span style="font-weight: bolder;">Design:</span> Once we have a finalized concept, our designers will create a final design
-											in various file formats suitable for both print and digital use. We'll ensure that the
-											logo is scalable, versatile, and represents your brand effectively.</li>
-										<li><span style="font-weight: bolder;">Revisions:</span> We offer a number of revisions to the design, so you're completely
-											satisfied with the end result. We want to make sure that your logo meets your
-											specific needs and preferences.</li>
-										<li><span style="font-weight: bolder;">Style guide:</span> We'll provide you with a style guide that outlines how the logo should
-											be used, including color codes, typography, and usage guidelines. This ensures
-											that your brand identity is consistent across all marketing materials.</li>
-										<li><span style="font-weight: bolder;">Branding strategy:</span> We also offer branding strategy services that go beyond logo
-											design. We help you develop a cohesive brand identity across all your marketing
-											materials and create a strong, consistent brand voice.
+                                        <li><span style="font-weight: bolder;">Social Media Monitoring:</span> : We monitor and respond to comments, messages, and
+											reviews in real-time to maintain a positive brand image.
 											</li>
-										<li><span style="font-weight: bolder;">Branding strategy:</span> Brand collateral: In addition to logo design services, we offer additional branding
-											materials, such as business cards, letterheads, and other printed or digital
-											collateral. These materials help you create a professional and cohesive brand
-											image.
+										<li><span style="font-weight: bolder;">Social Media Advertising:</span> : We run targeted social media advertising campaigns to
+											reach your desired audience and drive results.
+											</li>
+										<li><span style="font-weight: bolder;">Influencer Marketing:</span> We collaborate with influencers to promote your brand and
+											reach a wider audience.
+											</li>
+										<li><span style="font-weight: bolder;">Analytics and Reporting:</span> We provide regular analytics and reporting to measure
+											the success of your social media campaigns and make data-driven decisions.
+											</li>
+										<li><span style="font-weight: bolder;">Social Media Crisis Management:</span> We have a plan in place to respond to any
+											potential crisis on social media and protect your brand reputation.
 											</li>					
                                     </ul>
 									</div>
