--- a/Logo-Designing.html
+++ b/Logo-Designing.html
@@ -245,7 +245,7 @@
 											design. We help you develop a cohesive brand identity across all your marketing
 											materials and create a strong, consistent brand voice.
 											</li>
-										<li><span style="font-weight: bolder;">Branding strategy:</span> Brand collateral: In addition to logo design services, we offer additional branding
+										<li><span style="font-weight: bolder;"> Brand collateral:</span> In addition to logo design services, we offer additional branding
 											materials, such as business cards, letterheads, and other printed or digital
 											collateral. These materials help you create a professional and cohesive brand
 											image.
