--- a/App-Development.html
+++ b/App-Development.html
@@ -208,12 +208,16 @@
                         </div>
                         <div class="col-lg-8 mobt-35">
 							<div class="details-info-wrap ">
-                                <img class="project-thumb-img w-100 " src="assets/images/project/Logo Designing.png" alt="">
+                                <img class="project-thumb-img w-100 " src="assets/images/project/App Development.png" alt="">
 								<h3 class="details-info-title mt-4 mb-2 d-inline-block" style="color: #F44730;">App Development</h3>
-								<p class="details-info-text">Unique designs tailored for you <br>
-									Our experienced logo designers use the latest tools and techniques to create
-									unique logos that capture your brand’s image and tell its story. With AK Digitals,
-									you're guaranteed a completely personalized experience every time!</p>
+								<p class="details-info-text">Create Your Dream App<br>
+									At AK digitals, we provide our clients with the best app development services you
+									can find! Our team of experts will work with you to create a dream app that meets
+									your exact needs and specifications.<br>
+								
+									No matter what type of app you need developed, AK digitals has got you covered.
+									We specialize in developing all types of apps including eCommerce, gaming, social
+									media, business productivity, and more!</p>
 								<div class="row mt-3">
 									<div class="col-md-8">
 										<h2 class="details-info-title mt-4 mb-2 d-inline-block" style="color: #F44730;">Unlimited revisions, unlimited possibilities</h2>
@@ -223,37 +227,27 @@
 										</p>
 										<h2 class="details-info-title mt-4 mb-2 d-inline-block" style="color: #F44730;">Service Include</h2>
                                     <ul class="details-list details-list-project mt-3">
-                                        <li><span style="font-weight: bolder;">Consultation:</span> We begin by getting to know your brand, target audience, and
-											design preferences. We'll discuss your business goals and work together to create
-											a logo that accurately reflects your brand and resonates with your audience.
+                                        <li><span style="font-weight: bolder;">Mobile App Development:</span> We build native and hybrid apps for Android and iOS
+											platforms using the latest technologies.
 											</li>
-                                        <li><span style="font-weight: bolder;"> Research and conceptualization:</span> Our team of experienced designers will conduct
-											market research and competitor analysis to understand the industry trends and
-											create a unique design that stands out from the rest. We'll present you with initial
-											sketches and drafts to get your feedback and make any necessary revisions.
+                                        <li><span style="font-weight: bolder;">Web App Development:</span> We develop responsive and scalable web apps using
+											cutting-edge technologies like Angular, React, and Vue.
 											</li>
-                                        <li><span style="font-weight: bolder;">Design:</span> Once we have a finalized concept, our designers will create a final design
-											in various file formats suitable for both print and digital use. We'll ensure that the
-											logo is scalable, versatile, and represents your brand effectively.</li>
-										<li><span style="font-weight: bolder;">Revisions:</span> We offer a number of revisions to the design, so you're completely
-											satisfied with the end result. We want to make sure that your logo meets your
-											specific needs and preferences.</li>
-										<li><span style="font-weight: bolder;">Style guide:</span> We'll provide you with a style guide that outlines how the logo should
-											be used, including color codes, typography, and usage guidelines. This ensures
-											that your brand identity is consistent across all marketing materials.</li>
-										<li><span style="font-weight: bolder;">Branding strategy:</span> We also offer branding strategy services that go beyond logo
-											design. We help you develop a cohesive brand identity across all your marketing
-											materials and create a strong, consistent brand voice.
+                                        <li><span style="font-weight: bolder;">Cross-platform App Development:</span> We build apps that run seamlessly on multiple
+											platforms, including iOS, Android, and web.</li>
+										<li><span style="font-weight: bolder;">UI/UX Design:</span> We design visually appealing and user-friendly interfaces for your
+											app, ensuring a great user experience.</li>
+										<li><span style="font-weight: bolder;">Maintenance and Support:</span> We offer ongoing maintenance and support services to
+											keep your app running smoothly and to address any issues that may arise.
 											</li>
-										<li><span style="font-weight: bolder;">Branding strategy:</span> Brand collateral: In addition to logo design services, we offer additional branding
-											materials, such as business cards, letterheads, and other printed or digital
-											collateral. These materials help you create a professional and cohesive brand
-											image.
-											</li>					
+										<li><span style="font-weight: bolder;">App Upgrade and Migration:</span> We help you upgrade and migrate your existing app
+											to the latest technologies and platforms.
+											</li>
+														
                                     </ul>
 									</div>
 									<div class="col-md-4 mt-4 mt-md-0">
-										<img class="w-100" src="assets/images/project/Logo-design2-.png" alt="">
+										<img class="w-100" src="assets/images/project/App developmenmt 1.png" alt="">
 									</div>
 								</div>
 							</div>
