--- a/Digital-Marketing .html
+++ b/Digital-Marketing .html
@@ -228,7 +228,7 @@
                                     </ul>
 									</div>
 									<div class="col-md-4 mt-4 mt-md-0">
-										<img class="w-100" src="assets/images/project/App developmenmt 1.png" alt="">
+										<img class="w-100" src="assets/images/project/digital marketing.png" alt="">
 									</div>
 								</div>
 							</div>
