--- a/Business-Consultancy.html
+++ b/Business-Consultancy.html
@@ -139,7 +139,7 @@
                                     <svg width="9" height="13" viewBox="0 0 9 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M2 13C1.71875 13 1.46875 12.9062 1.28125 12.7188C0.875 12.3438 0.875 11.6875 1.28125 11.3125L5.5625 7L1.28125 2.71875C0.875 2.34375 0.875 1.6875 1.28125 1.3125C1.65625 0.90625 2.3125 0.90625 2.6875 1.3125L7.6875 6.3125C8.09375 6.6875 8.09375 7.34375 7.6875 7.71875L2.6875 12.7188C2.5 12.9062 2.25 13 2 13Z" fill="currentColor"/>
                                     </svg>
-									Digital Marketing
+									Business Consultancy
 									
                                 </p>
                             </div>
@@ -208,8 +208,8 @@
                         </div>
                         <div class="col-lg-8 mobt-35">
 							<div class="details-info-wrap ">
-                                <img class="project-thumb-img w-100 " src="assets/images/project/Digital Marketing.png" alt="">
-								<h3 class="details-info-title mt-4 mb-2 d-inline-block" style="color: #F44730;">Digital Marketing</h3>
+                                <img class="project-thumb-img w-100 " src="assets/images/project/Business-Consultancy.png" alt="">
+								<h3 class="details-info-title mt-4 mb-2 d-inline-block" style="color: #F44730;">Business Consultancy</h3>
 								<p class="details-info-text">Are you ready to transform your app dreams into reality? Look no further than AK Digitals!<br>
 
 									At AK Digitals, we are your partners in innovation, offering top-tier app development services tailored to your unique needs and specifications. Our team of seasoned experts is committed to bringing your vision to life, ensuring an unparalleled user experience.</p>
