--- a/Business-Consultancy.html
+++ b/Business-Consultancy.html
@@ -210,20 +210,19 @@
 							<div class="details-info-wrap ">
                                 <img class="project-thumb-img w-100 " src="assets/images/project/Business-Consultancy.png" alt="">
 								<h3 class="details-info-title mt-4 mb-2 d-inline-block" style="color: #F44730;">Business Consultancy</h3>
-								<p class="details-info-text">Are you ready to transform your app dreams into reality? Look no further than AK Digitals!<br>
-
-									At AK Digitals, we are your partners in innovation, offering top-tier app development services tailored to your unique needs and specifications. Our team of seasoned experts is committed to bringing your vision to life, ensuring an unparalleled user experience.</p>
+								<p class="details-info-text">Ready to make your mark in the business world? AK Digitals is here to turn your vision into a strategic reality.<br>
+									Elevate your business game with AK Digitals, your go-to hub for cutting-edge consultancy services!</p>
 								<div class="row mt-3">
 									<div class="col-md-8">
 									
 										<h2 class="details-info-title mt-4 mb-2 d-inline-block" style="color: #F44730;">Service Include</h2>
                                     <ul class="details-list details-list-project mt-3">
-                                        <li><span style="font-weight: bolder;">Develop Any App Type:</span> No challenge is too big for us! Whether you're envisioning an eCommerce powerhouse, a captivating gaming platform, a social media sensation, or a business productivity game-changer, AK Digitals has got you covered. Our expertise spans across native and hybrid mobile app development for Android and iOS, responsive web app development using cutting-edge technologies like Angular, React, and Vue, as well as cross-platform app development that runs seamlessly on iOS, Android, and the web.
+                                        <li><span style="font-weight: bolder;">Strategic Consultancy Solutions:</span> At AK Digitals, we're not just developers; we're business visionaries. Let us guide you with strategic consultancy solutions tailored to your unique needs, ensuring your business thrives in the digital era.
 											</li>
-                                        <li><span style="font-weight: bolder;">Elevate with Stunning UI/UX Design:</span> First impressions matter! Our design team crafts visually appealing and user-friendly interfaces that captivate your audience from the very first glance. We believe in creating not just apps but experiences that users will love.
+                                        <li><span style="font-weight: bolder;"> Expert Business Insights:</span> Unlock the power of data-driven decisions. AK Digitals provides expert insights to help you navigate challenges, seize opportunities, and drive your business towards unparalleled success.
 											</li>
-                                        <li><span style="font-weight: bolder;">Comprehensive Support & Maintenance:</span> Your success is our priority! AK Digitals provides ongoing support and maintenance services to ensure your app runs smoothly and efficiently. Our team is dedicated to promptly addressing any issues that may arise, letting you focus on what you do best – growing your business.</li>
-										<li><span style="font-weight: bolder;">Upgrade and Migrate with Ease:</span> Stay ahead of the curve! AK Digitals helps you seamlessly upgrade and migrate your existing app to the latest technologies and platforms. Keep your app relevant, efficient, and competitive in today's dynamic digital landscape.</li>
+                                        <li><span style="font-weight: bolder;">Digital Transformation Simplified:</span> Experience a seamless digital transformation journey. Our consultancy services focus on streamlining processes, maximizing efficiency, and propelling your business into the future.</li>
+										<li><span style="font-weight: bolder;">Tailored to Your Success Story:</span> Your business is unique, and so are our consultancy services. AK Digitals crafts tailored solutions that align with your goals, industry nuances, and growth aspirations. Let us be the architects of your success story, creating a roadmap that propels your business to new heights.</li>
 											
                                     </ul>
 									</div>
