--- a/contact.html
+++ b/contact.html
@@ -192,18 +192,18 @@
                                 <div class="row">
                                     <div class="col-xl-6 col-lg-6 col-sm-12 col-12">
                                         <label>Name</label>
-                                        <input type="text"  placeholder="Your Name">
+                                        <input type="text" name="Name" placeholder="Your Name">
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-sm-12 col-12">
                                         <label>E-mail</label>
-                                        <input type="email" placeholder="Yourmail@.com">
+                                        <input type="email" name="E-mail" placeholder="Yourmail@.com">
                                     </div>
                                     <div class="col-xl-12 col-lg-12 col-sm-12 col-12">
                                         <label>Message</label>
                                         <textarea name="message" id="message" cols="30" rows="4" placeholder="Description"></textarea>
                                     </div>
                                     <div class="contact-btn-wrap">
-                                        <button type="submit" class="common-btn hover-black border-0">
+                                        <button type="submit" name="Send" class="common-btn hover-black border-0">
                                             <span>
 												CONTACT US
 												<svg width="15" height="14" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg">
