--- a/Digital-Marketing .html
+++ b/Digital-Marketing .html
@@ -356,7 +356,7 @@
 							<div class="footer-widget footer-black">
 								<h2 class="footer-title">NEWSLETTER</h2>
 								<div class="subscribe-form position-relative">
-									<input type="text"  placeholder="Your Email Here">
+									<input type="email" placeholder="Email Address" id="email" name="email">
 									<button class="subscribe-form-icon" type="submit">
 										<svg width="15" height="14" viewBox="0 0 15 14" fill="none"
 											xmlns="http://www.w3.org/2000/svg">
