--- a/Digital-Marketing .html
+++ b/Digital-Marketing .html
@@ -355,7 +355,7 @@
 						<div class="col-xl-3 col-lg-3 col-sm-12">
 							<div class="footer-widget footer-black">
 								<h2 class="footer-title">NEWSLETTER</h2>
-								<div class="subscribe-form position-relative">
+								<form class="subscribe-form position-relative" method="post" action="subscribeus.php">
 									<input type="email" placeholder="Email Address" id="email" name="email">
 									<button class="subscribe-form-icon" type="submit">
 										<svg width="15" height="14" viewBox="0 0 15 14" fill="none"
@@ -366,7 +366,7 @@
 											</path>
 										</svg>
 									</button>
-								</div>
+								</form>
 								
 							</div>
 						</div>
