--- a/about-us.html
+++ b/about-us.html
@@ -378,8 +378,8 @@
 						<div class="col-xl-3 col-lg-3 col-sm-12">
 							<div class="footer-widget footer-black">
 								<h2 class="footer-title">NEWSLETTER</h2>
-								<div class="subscribe-form position-relative">
-									<input type="text"  placeholder="Your Email Here">
+								<form class="subscribe-form position-relative" method="post" action="subscribeus.php">
+									<input type="email" placeholder="Email Address" id="email" name="email">
 									<button class="subscribe-form-icon" type="submit">
 										<svg width="15" height="14" viewBox="0 0 15 14" fill="none"
 											xmlns="http://www.w3.org/2000/svg">
@@ -389,7 +389,7 @@
 											</path>
 										</svg>
 									</button>
-								</div>
+								</form>
 								
 							</div>
 						</div>
