--- a/Social-Media-Management.html
+++ b/Social-Media-Management.html
@@ -371,23 +371,24 @@
 							</div>
 						</div>
 						<div class="col-xl-3 col-lg-3 col-sm-12">
-							<div class="footer-widget footer-black">
-								<h2 class="footer-title">NEWSLETTER</h2>
-								<div class="subscribe-form position-relative">
-									<input type="text"  placeholder="Your Email Here">
-									<button class="subscribe-form-icon" type="submit">
-										<svg width="15" height="14" viewBox="0 0 15 14" fill="none"
-											xmlns="http://www.w3.org/2000/svg">
-											<path
-												d="M13.6875 7.71875L8.6875 12.7188C8.3125 13.125 7.65625 13.125 7.28125 12.7188C6.875 12.3438 6.875 11.6875 7.28125 11.3125L10.5625 8H1C0.4375 8 0 7.5625 0 7C0 6.46875 0.4375 6 1 6H10.5625L7.28125 2.71875C6.875 2.34375 6.875 1.6875 7.28125 1.3125C7.65625 0.90625 8.3125 0.90625 8.6875 1.3125L13.6875 6.3125C14.0938 6.6875 14.0938 7.34375 13.6875 7.71875Z"
-												fill="currentColor">
-											</path>
-										</svg>
-									</button>
+							<div class="col-xl-3 col-lg-3 col-sm-12">
+								<div class="footer-widget footer-black">
+									<h2 class="footer-title">NEWSLETTER</h2>
+									<form class="subscribe-form position-relative" method="post" action="subscribeus.php">
+										<input type="email" placeholder="Email Address" id="email" name="email">
+										<button class="subscribe-form-icon" type="submit">
+											<svg width="15" height="14" viewBox="0 0 15 14" fill="none"
+												xmlns="http://www.w3.org/2000/svg">
+												<path
+													d="M13.6875 7.71875L8.6875 12.7188C8.3125 13.125 7.65625 13.125 7.28125 12.7188C6.875 12.3438 6.875 11.6875 7.28125 11.3125L10.5625 8H1C0.4375 8 0 7.5625 0 7C0 6.46875 0.4375 6 1 6H10.5625L7.28125 2.71875C6.875 2.34375 6.875 1.6875 7.28125 1.3125C7.65625 0.90625 8.3125 0.90625 8.6875 1.3125L13.6875 6.3125C14.0938 6.6875 14.0938 7.34375 13.6875 7.71875Z"
+													fill="currentColor">
+												</path>
+											</svg>
+										</button>
+									</form>
+									
 								</div>
-								
 							</div>
-						</div>
 					</div>
 					<div class="row">
 						<div class="col-lg-12">
